--- a/fj/fitness_jerk/templates/fitness_jerk/exercise_loose.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/exercise_loose.html
@@ -1,31 +1,50 @@
 {% extends 'fitness_jerk/base.html' %}
 {% load static %}
 
-{% block title %}Training Loose It All!{% endblock %}
+{% block title %}Training Loose it all!{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'css/timer_css.css' %}">
-<h1>FitBastards Timer</h1>
+<div class="exercise-container">
+    <h2>Exercises</h2>
 
-<button id="start-btn">Start</button>
-<button id="pause-resume-btn">Pause</button>
-<button id="finish-btn" style="display:none;"><a href="{% url 'finish' %}">Finish</a></button>
+    <ul id="exercise-list">
+        {% if exercises %}
+        {% for exercise in exercises %}
+        <li class="exercise-item" data-duration="{{ exercise.duration }}" data-name="{{ exercise.name }}"
+            style="display: none;">
+            <span class="exercise-name">{{ exercise.name }}</span>
+            <iframe class='video_url' width="400" height="240"
+                src="{{ exercise.video_url }}?start={{ exercise.start_time }}&end={{ exercise.end_time }}"
+                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen>
+            </iframe>
+        </li>
+        {% endfor %}
+        {% endif %}
+    </ul>
 
-<h1>Exercise List</h1>
-<h2>Exercises</h2>
-<ul id="exercise-list">
-    {% if exercises %}
-    {% for exercise in exercises %}
-    <li class="exercise-item" data-duration="{{ exercise.duration }}" data-name="{{ exercise.name }}"
-        style="display: none;">
-        <span class="exercise-name">{{ exercise.name }}</span>
-    </li>
-    {% endfor %}
-    {% endif %}
-</ul>
-<div id="message">Start</div>
-<div id="timer"></div> <!-- Initialize with 30 seconds -->
+    <div id="message">
+        <p>Start</p>
+    </div>
 
-<script src="{% static 'timer_js.js' %}"></script>
-<script src="{% static 'navbar_js.js' %}"></script>
+    <div id="timer">
+        30 seconds
+    </div>
+
+    <div class="button-layout">
+        <button id="start-btn" data-play-icon="{% static 'play.svg' %}" data-pause-icon="{% static 'pause.svg' %}">
+            <img src="{% static 'play.svg' %}" alt="Play" fill="red">
+        </button>
+        <button id="finish-btn">
+            <a href="{% url 'finish' %}">Done!</a>
+        </button>
+        <button id="return-btn">
+            <a href="{% url 'profile' %}">Give up!</a>
+        </button>
+    </div>
+
+    <script src="{% static 'timer_js.js' %}"></script>
+    <script src="{% static 'navbar_js.js' %}"></script>
+</div>
 {% endblock %}
