--- a/fj/fitness_jerk/static/css/navbar_css.css
+++ b/fj/fitness_jerk/static/css/navbar_css.css
@@ -2,18 +2,17 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    align-content: center;
+    padding: 1rem;
+    position: fixed;
     align-items: center;
     padding: 20px;
-    /* position: fixed; */
     top: 0;
     left: 0;
     z-index: 1000;
     color: white;
-}
+    background: transparent;
 
-.navbar-left {
-    display: flex;
-    align-items: center;
 }
 
 .navbar-left .main-logo {
@@ -24,14 +23,12 @@
 }
 
 .navbar-right {
-    display: flex;
-    align-items: center;
+    align-content: center;
     justify-content: space-evenly;
 }
 
 .nav-item {
     color: white;
-    font-size: 16px;
     text-decoration: none;
     transition: color 0.3s;
     margin: 12px;
@@ -41,7 +38,7 @@
 #profile-btn {
     background-color: #d19b4e;
     border-radius: 18px;
-    padding: 5px;
+
 }
 
 #joinus-btn a,
@@ -49,6 +46,7 @@
     text-decoration: none;
     color: #fff;
     font-weight: bold;
+    padding-block: 4px;
 }
 
 .nav-item:hover {
@@ -93,6 +91,12 @@
     }
 
     .nav-menu.active {
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 12px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
         display: flex;
         width: 100px;
     }
@@ -102,4 +106,10 @@
         justify-content: center;
         align-items: center;
     }
+
+    #joinus-btn {
+        border-radius: 12px;
+    }
+
+
 }
