--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -5,7 +5,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 
-/* Apply box-sizing and global reset */
 *,
 *::before,
 *::after {
@@ -19,6 +18,7 @@
 html,
 body {
     width: 100%;
+    height: 100%;
     margin: 0;
     padding: 0;
 }
@@ -26,34 +26,40 @@ body {
 body {
     display: flex;
     flex-direction: column;
-    justify-content:space-between;
-    align-items: center; 
-    padding: 2px; 
+    justify-content: space-between;
+    align-items: center;
+    padding: 2px;
     background-image: linear-gradient(rgba(4, 30, 42, 1), rgb(30, 3, 14, .50));
+    position: fixed;
     background-repeat: no-repeat;
-    color: rgba(255, 255, 255, 1);
-    background-size: cover;
-    background-attachment: fixed;
+}
+
+body h1 {
+    font-size: 2em;
+}
+
+body p {
+    font-size: 1em;
 }
 
 
 .container {
     display: flex;
     align-content: center;
-    height: 100%;
-    flex-direction: column; 
-    margin: auto;
-    padding: 20px;
-   
-} 
+    height: 100%; 
+    width: 100%; 
+    position: relative;
+}
 
 footer {
-    width: 100%;
-    text-align: center;
-    padding: 10px; 
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background: whitesmoke;
-    height: 40px;
-    position: relative;
+    height: 60px;
+    width: 100%;
+    bottom: 0;
 }
 
 .copyright {
@@ -63,138 +69,154 @@ footer {
     text-decoration: none;
     gap: 2rem;
     padding: 8px;
+    z-index: 1002;
 }
 
 .copyright a {
     color: black;
 }
 
+
+
 /*------------Landing Page ------------*/
 .image-container {
     position: relative;
+    width: 100%; 
+    height: 85vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-
 }
 
-.landing-page {
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40%;
-    z-index: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
-}
 
 .outer-box {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 25%;
+    width: 30%;
     aspect-ratio: 1;
     outline: 25px solid #d19b4e;
     transform: rotate(-20deg);
     border-radius: 30px;
-    z-index: -1;
+    position: relative;
+    z-index: 1;
+    top: 5%;
 }
 
 
-.land-text {
+.landing-page {
     position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    z-index: 1;
+    padding: 20px;
+    border-radius: 10px;
+    width: 40%;
+}
+
+.h1 {
+    position: absolute;
+    font-size: 10vw;
+    color: whitesmoke;
+    z-index: 1;
+    font-weight: 700;
+    margin-top: 15%;
+}
+
+.h1 p {
+    position: absolute;
+    width: 320px;
+    font-size: 1rem;
+    padding-left: .5rem;
+}
+
+.login-bottom {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+.google-lgn {
+    border-radius: 16px;
+    text-align: center;
+    font-size: .8rem;
+    margin-left: .5rem;
+    width: 128px;
+    margin-top: 1rem;
+    background: black;
+    align-items: center;
+    align-content: center;
+}
+
+.google-icon {
+    width: 12px;
+    height: 12px;
+}
+
+
+.join-us-btn {
     display: flex;
     justify-content: center;
-    align-items: center;
-    font-size: 5vw;
-    z-index: 0;
-    width: 100%;
-    height: 100%;
+    color: whitesmoke;
+    background: #d19b4e;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 16px;
     text-align: center;
-    color: whitesmoke;
+    font-size: .8rem;
+    margin-left: .5rem;
+    width: 128px;
+    margin-top: 1rem;
+    transition: all .55s ease;
 }
 
-
-.about-text {
-    position: absolute;
-    font-weight: bold;
-    bottom: 180px;
-    left: 0;
-    height: 8rem;
-    width: 320px;
-    padding: 10px;
-    color: whitesmoke;
-    font-size: 20px;
+.join-us-btn:hover {
+    background: limegreen;
+    color: #292929;
+    transform: translateX(4px)
 }
+
 
 .learn-more-btn {
-    display: inline-block;
-    margin-top: 20px;
+    display: flex;
+    justify-content: center;
     color: whitesmoke;
     outline: 3px solid whitesmoke;
     padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 16px;
     text-align: center;
+    font-size: .8rem;
+    margin-left: .5rem;
+    width: 128px;
+    margin-top: 6rem;
+    transition: all .55s ease;
 }
 
 .learn-more-btn:hover {
+    background: transparent;
     color: #292929;
+    transform: translateX(4px)
 }
 
-@media (max-width: 768px) {
-    .landing-page {
-        width: 100%;
-    }
 
-    .outer-box {
-        width: 70%;
-        outline: 12px solid #d19b4e;
-    }
-
-    .land-text {
-        font-size: 6vw;
-    }
-
-    .quote-small {
-        margin-top: 5%;
-    }
-
-    .about-text {
-        bottom: 30%;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 70%;
-        /* Adjust width for smaller screens */
-        text-align: center;
-    }
-
-    .learn-more-btn {
-        display: block;
-        margin-top: 20px;
-        margin-left: auto;
-        margin-right: auto;
-        text-align: center;
-    }
-}
 
 
 /*------------profile page---------*/
     
 /* Flex container for the intro section */
-.row{
+.row {
     display: flex;
-    padding: 5px;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    margin-top: 80px;
+    flex-wrap: wrap;
+    align-content: center;
+    color: whitesmoke;
 }
 
 .leftcolumn {   
@@ -487,23 +509,31 @@ img {
 
 /*--------------------Login-------------------*/
 
+.login-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    margin-top: 80px;
+    overflow: hidden;
+}
+
 .quote-small {
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     color: white;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 
 .quote-text {
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 700;
     color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     text-align: center;
     margin: 20px;
     line-height: 1;
@@ -513,12 +543,11 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30vh;
 }
 
 .login-box {
     flex-direction: column;
-    background-color: white;
+    background-color: whitesmoke;
     border-radius: 16px;
     padding: 20px;
     box-shadow: 0px 5px 12px #292929;
@@ -540,9 +569,11 @@ input[type="email"] {
 }
 
 input[type="text"]::placeholder,
-input[type="password"]::placeholder {
+input[type="password"]::placeholder,
+input[type="email"]::placeholder {
     color: #292929;
 }
+
 
 .login-btn {
     display: flex;
@@ -560,7 +591,6 @@ button {
     border-radius: 30px;
     cursor: pointer;
     margin: auto;
-    /* Center the button horizontally */
 }
 
 .links {
@@ -587,29 +617,44 @@ button {
 }
 
 
-.join-us {
-    font-size: 16px;
-    text-align: center;
-    margin-top: 20px;
-}
-
-.join-us a {
-    font-size: 16px;
-    color: black;
-    text-decoration: none;
-
-    :root {
-        --timing: 800ms;
-        --rotation: 20deg;
-    }
-}
-
 /*------------settings---------------------*/
 
-.profile_settings {
-    background-color: #2929294f;
+.settings_main{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    margin-top: 30px;
+    overflow: visible; 
+    flex-wrap: wrap;
+    align-content: center;
     border-radius: 30px;
     padding: 30px;
+    margin-bottom: 70px; 
+    color: whitesmoke;
+    
+  
+}
+
+.profile_settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    overflow: visible; 
+    flex-wrap: wrap;
+    align-content: center;
+    background-color: #2929294f;
+    border-radius: 30px;
+    padding: 15px;
+    margin-bottom: 70px; 
+    
+}
+
+form.settings_form {
+    width: fit-content;
 }
 
 .image_top {
@@ -647,6 +692,7 @@ button {
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
+    z-index: 10;
 }
 
 .dropdown-checkbox {
@@ -685,13 +731,12 @@ button {
     top: 0;
     left: 41%;
     right: 0;
-    z-index: 10;
+    z-index: 9999;
     background-color:  whitesmoke;
     border: 1px solid  #2929294f;
-    max-height: fit-content; 
-    overflow-y: auto;
+    height: fit-content; 
+    overflow:visible;
     width: fit-content;
-    /* border-radius: 10px; */
     color: black;
 }
 
@@ -700,6 +745,7 @@ button {
     align-items: center;
     padding: 10px;
     cursor: pointer;
+    z-index: 10;
 }
 
 .option img {
@@ -729,8 +775,6 @@ label[for="id_image"] {
     margin-left: 5px;
     margin-right: 5px;
     width:fit-content;
-
-    
 }
 
 .dropdown-selected-avatar {
@@ -762,15 +806,41 @@ label[for="id_image"] {
     padding: 5px;
 }
 
+.errorlist {
+    color: whitesmoke;
+    margin: 5px;
+    list-style-type: none;
+    background-color: #fa03034f;
+    width:fit-content;
+    padding: 2px;
+}
+
 /* -----------Delete page--------------- */
 
 .profile_delete {
     display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    margin-top: 50px;
+    flex-wrap: wrap;
+    align-content: center;
+    border-radius: 30px;
+    padding: 30px;
+    color: whitesmoke;
+}
+
+.delete_confirmation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: wrap;
+    align-content: center;
     background-color: #2929294f;
     border-radius: 30px;
     padding: 30px;
-    flex-direction: column;
-    align-items: center;
 }
 
 .profile_delete a {
@@ -806,8 +876,9 @@ label[for="id_image"] {
     justify-content: center;
     text-align: center;
     margin: 0 auto;
-    padding: 5px;
+    padding: .5rem;
     width: 50%;
+    margin-top: 80px;
 }
 
 .about-us {
@@ -818,13 +889,49 @@ label[for="id_image"] {
 
 @media (max-width: 768px) {
     .about-us-container {
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+        backdrop-filter: blur(10px);
+        border-radius: 18px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
         width: 100%;
         overflow: auto;
+        font-size: 12px;
+        margin-top: 1rem;
+        z-index: 1;
     }
 
     .about-us {
         font-size: 14px;
         text-align: left;
         color: white;
+        z-index: 1;
+    }
+
+    .copyright {
+        display: flex;
+        align-items: center;
+    }
+
+    @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
+        .about-us-container {
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+            backdrop-filter: blur(10px);
+            border-radius: 18px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
+            width: 100%;
+            overflow: auto;
+            font-size: 12px;
+            margin-top: 1rem;
+            z-index: 1;
+        }
+
+        .about-us {
+            font-size: 14px;
+            text-align: left;
+            color: white;
+            z-index: 1;
+        }
     }
 }
