--- a/fj/fitness_jerk/static/css/timer_css.css
+++ b/fj/fitness_jerk/static/css/timer_css.css
@@ -1,79 +1,151 @@
-/* Define a simple, clean style for the timer and buttons */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Inter', sans-serif;
     background-color: #f0f0f0;
     color: #333;
-    text-align: center;
     padding: 20px;
+    position: absolute;
+    width: 100%;
 }
 
-h1 {
-    font-size: 36px;
-    margin-bottom: 20px;
+/*------------Exercise Container -------*/
+.exercise-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 80px auto 0;
+    height: 80%;
+    width: 40%;
+    border-radius: 16px;
+    background: whitesmoke;
+    box-shadow: 0px 5px 12px #292929;
 }
 
-#message {
-    font-size: 1.5em;
-    margin-top: 10px;
-    color: green;
+.exercise-container h2,
+li,
+p {
+    font-weight: 500;
 }
 
-#timer {
-    font-size: 36px;
-    /* Decrease font size for smaller screens */
-    margin-bottom: 15px;
-    /* Reduce bottom margin for smaller screens */
-    color: green;
-    font-weight: bold;
-}
-
-button {
-    font-size: 16px;
-    /* Decrease font size for smaller screens */
-    padding: 8px 16px;
-    /* Decrease padding for smaller screens */
-    margin: 5px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.button-layout {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: center;
+    height: 20%;
+    width: 70%;
+    padding: 2% 2%;
+    margin-top: auto;
+    gap: 1rem;
 }
 
 #start-btn {
-    background-color: green;
-    color: white;
+    width: 6.5rem;
+    background: none;
+    cursor: pointer;
+    transition: all .55s ease;
+
 }
 
-#pause-resume-btn {
-    background-color: #5bc0de;
-    color: white;
+#start-btn:hover {
+    color: #292929;
+    transform: translateX(5px);
 }
 
-#pause-resume-btn:hover {
-    background-color: #31b0d5;
+#start-btn:active {
+    border: none;
+
+
+
 }
+
 
 #finish-btn {
-    background-color: #d9534f;
-    color: white;
+    color: whitesmoke;
+    background: gray;
+    border: none;
+    border-radius: 35px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all .55s ease;
+
 }
 
+
 #finish-btn:hover {
-    background-color: #c9302c;
+    background: green;
+    color: #292929;
+    transform: translateX(5px)
+}
+
+#finish-btn a {
+    padding: 1rem 2rem;
+    font-weight: 700;
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+
+#return-btn {
+    color: whitesmoke;
+    background: gray;
+    border: none;
+    border-radius: 35px;
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: all .55s ease;
+
+}
+
+#return-btn a {
+    padding: 1rem 2rem;
+    font-weight: 700;
+    color: whitesmoke;
+    cursor: pointer;
+}
+
+#return-btn:hover {
+    background: red;
+    color: #292929;
+    transform: translateX(5px)
+}
+
+
+#pause-resume-btn {
+    width: 6.5rem;
+    background: none;
+    cursor: pointer;
+
+}
+
+#timer {
+    font-weight: 700;
 }
 
 /* Responsive Design for iPhone */
 @media only screen and (max-width: 480px) {
     #timer {
         font-size: 24px;
-        /* Further decrease font size for iPhone */
         margin-bottom: 10px;
-        /* Further reduce bottom margin for iPhone */
     }
 
     button {
         font-size: 14px;
-        /* Further decrease font size for iPhone */
         padding: 6px 12px;
-        /* Further decrease padding for iPhone */
+    }
+
+    #finish-btn {
+        width: 80%;
+        padding: 0.5rem 1rem;
+        font-size: 14px;
     }
 }
