--- a/fj/templates/socialaccount/login.html
+++ b/fj/templates/socialaccount/login.html
@@ -1,5 +1,17 @@
+{% extends 'fitness_jerk/base.html' %}
 {% load i18n %}
 {% load allauth %}
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>HELO FROM BASE_DIR</h1>
     {% element form method="post" no_visible_fields=True %}
         {% slot actions %}
             {% csrf_token %}
@@ -8,3 +20,5 @@
             {% endelement %}
         {% endslot %}
     {% endelement %}
+</body>
+</html>
