--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -216,7 +216,7 @@ footer {
     margin-top: 80px;
     flex-wrap: wrap;
     align-content: center;
-    color: whitesmoke;
+    color: black;
 }
 
 .leftcolumn {   
@@ -263,9 +263,11 @@ footer {
 }
 
 .profile {
-    background-color: #2929294f;
-    border-radius: 30px;
-    padding: 30px;
+    /* background-color: #2929294f; */
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0px 5px 12px #292929;
 }
   
 .profile_pic img {
@@ -292,8 +294,11 @@ footer {
     width: 100%;
     padding: 50px;
     margin-bottom: 50px;
-    background-color: #2929294f;
-    border-radius: 30px;
+    /* background-color: #2929294f; */
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0px 5px 12px #292929;
     height: fit-content;
     align-content: center;
     text-align: center;
@@ -323,8 +328,11 @@ input[type="submit"] {
     flex-direction: row;
     display: flex;
     justify-content: center;
-    background-color: #2929294f;
-    border-radius: 30px;
+    /* background-color: #2929294f; */
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0px 5px 12px #292929;
     
 }
 
@@ -428,8 +436,11 @@ img {
     width: 50%;
     height: 100px;
     text-align: left;
-    background-color: #2929294f;
-    border-radius: 30px;
+    /* background-color: #2929294f; */
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0px 5px 12px #292929;
     padding: 15px;
     margin-bottom: 20px;
 
@@ -439,7 +450,7 @@ img {
     letter-spacing: 1px;
     margin-bottom: 20px;
     margin-left: 10px;
-    color: #ffffff;
+    color: black;
     font-size: 16px;
 
 }
@@ -449,11 +460,13 @@ img {
     width: 100%;
     height: 25px;
     border-radius: 5px;
+    border-color: #292929;
+    border-style: solid;
     
 }
 
 .progress-bar div {
-    height: 25px;
+    height: 20px;
     border-radius: 5px;
     width: 0%;
 
@@ -468,11 +481,11 @@ img {
     margin-top: -10px;
     margin-right: -30px;
     margin-left: 30px;
-    color: #959595;
+    color: #292929;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid rgb(100, 248, 1);
+    border: 1px solid #292929;
 
 }
 
@@ -626,7 +639,7 @@ button {
     align-items: flex-start;
     width: 100%;
     height: 100%;
-    margin-top: 30px;
+    margin-top: 10px;
     overflow: visible; 
     flex-wrap: wrap;
     align-content: center;
@@ -646,7 +659,6 @@ button {
     overflow: visible; 
     flex-wrap: wrap;
     align-content: center;
-    background-color: #2929294f;
     border-radius: 30px;
     padding: 15px;
     margin-bottom: 70px; 
@@ -655,15 +667,24 @@ button {
 
 form.settings_form {
     width: fit-content;
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 15px;
+    box-shadow: 0px 5px 12px #292929;
+    color:black;
 }
 
 .image_top {
+    display: block;
+    margin:auto;
     text-align: center;
+    width: fit-content;
     
 }
 
 .user_details {
     border-color: whitesmoke;
+    box-shadow: 0px 5px 12px #292929;
     border-style: solid;
     border-radius: 10px;
     padding: 10px;
@@ -680,10 +701,15 @@ form.settings_form {
     margin:auto;
 }
 
+.delete_option {
+    text-align: center;
+}
+
 .profile_img {
     display: flex;
     flex-direction: row;
     align-items: center;
+    
 }
 
 .custom-dropdown {
@@ -701,10 +727,10 @@ form.settings_form {
 
 .profile_pic_settings {
     border-color: whitesmoke;
-    border-style: solid;
+    box-shadow: 0px 5px 12px #292929;
     border-radius: 10px;
     padding: 10px;
-    margin-top: 5px;
+    margin-top: 20px;
 }
 
 .dropdown-label {
@@ -815,45 +841,17 @@ label[for="id_image"] {
     padding: 2px;
 }
 
+.update_delete_btn {
+    border-color: whitesmoke;
+    box-shadow: 0px 5px 12px #292929;
+    border-style: solid;
+    border-radius: 10px;
+    padding: 5px;
+}
+
 /* -----------Delete page--------------- */
 
-.profile_delete {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 100%;
-    height: 100%;
-    margin-top: 50px;
-    flex-wrap: wrap;
-    align-content: center;
-    border-radius: 30px;
-    padding: 30px;
-    color: whitesmoke;
-}
-
-.delete_confirmation {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: wrap;
-    align-content: center;
-    background-color: #2929294f;
-    border-radius: 30px;
-    padding: 30px;
-}
-
-.profile_delete a {
-    text-decoration: none;
-    color:rgba(4, 30, 42, 1)
-}
-
-.delete_form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
+/* SOME OF THE DELETE PAGE IS FOLLOWING THE LOGIN PAGE CONFIGURATION...CHECK HTML TO DOUBLE CHECK */
 
 .back_profile {
     width:fit-content;
@@ -866,8 +864,8 @@ label[for="id_image"] {
     background-color: red;
     border-radius: 10px;
     padding: 5px;
-    color:#292929 ;
-}
+    color: whitesmoke;
+} 
 
 
 /*------------------learn_more/about_us-----------*/
