--- a/fj/fitness_jerk/templates/fitness_jerk/delete.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/delete.html
@@ -5,18 +5,28 @@
 <title>Delete</title>
 
 {% block content %}
-<div class="profile_delete">
-    <div class="delete_confirmation">
-        <h1>{{ member }}</h1><br><br>
-        <h2>Are you sure you want to delete your account?</h2><br><br>
-        <form action="" method=POST class="delete_form">
-            {% csrf_token %}
-            <a href="{% url 'profile' %}"><button type="button" class="back_profile">Back to profile</button></a>
-            <br><br>
-            <button type="submit" class="delete">Delete</button>
-        </form>
-        <script src="{% static 'navbar_js.js' %}"></script>
+<div class="login-main">
+    <div class="quote-small">
+      <p>NOTHING IS IMPOSSIBLE</p>
+    </div>
+    <div class="quote-text">
+      <h2>DELETE<br>CONFIRMATION</h2>
+    </div>
+    <div class="login-menu" id="login-menu">
+        <div class="login-box">
+            <form action="" method="post">
+                {% csrf_token %}
+                <div class="form-group">
+                    <h3 style="text-align: center;">User: {{ member }}</h3>
+                </div>
+                <div class="login-btn">
+                    <a href="{% url 'profile' %}"><button type="button" class="back_profile">Back to profile</button></a>
+                </div>
+                <div class="delete-btn" style="text-align: center; margin-top: 10px;">
+                    <button type="submit" class="delete">DELETE</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
-
 {% endblock %}
