--- a/fj/fitness_jerk/templates/registration/change_password_done.html
+++ b/fj/fitness_jerk/templates/registration/change_password_done.html
@@ -1,7 +1,15 @@
-{% extends "base.html" %}
+{% extends 'fitness_jerk/base.html'%}
+{% load static %}
 
+{% block title %}About FitBastards{% endblock %}
 {% block content %}
+<div class="about-us-container">
+  <p class="about-us">
+    Hey there,<br>
   <h2>Password Change Successful</h2>
-  <p>Your password has been changed successfully.</p>
+  Your password has been changed successfully.
   <a href="{% url 'profile' %}">Home</a>
+  </p>
+  <script src="{% static 'navbar_js.js' %}"></script>
+</div>
 {% endblock %}
