--- a/fj/fitness_jerk/templates/registration/custom_password_reset_done.html
+++ b/fj/fitness_jerk/templates/registration/custom_password_reset_done.html
@@ -1,12 +1,22 @@
-{% extends 'base.html' %}
+{% extends 'fitness_jerk/base.html'%}
+{% load static %}
 
+{% block title %}About FitBastards{% endblock %}
 {% block content %}
+<div class="about-us-container">
+    <p class="about-us">
+        Hey there,<br>
+        Password reset sent!
 
-<h2>Password reset sent</h2>
 
-<p>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</p>
-<p>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</p>
+        We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You
+        should receive them shortly.
+        If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your
+        spam folder.
 
-<a href="{% url 'login' %}">Home</a>
+        <a href="{% url 'login' %}" class="home-btn">Home</a>
 
+    </p>
+    <script src="{% static 'navbar_js.js' %}"></script>
+</div>
 {% endblock %}
