--- a/fj/fitness_jerk/templates/registration/custom_password_reset_form.html
+++ b/fj/fitness_jerk/templates/registration/custom_password_reset_form.html
@@ -1,11 +1,24 @@
-{% extends 'base.html' %}
+{% extends 'fitness_jerk/base.html' %}
+{% load static %}
 
 {% block content %}
-  <h2>Password reset</h2>
-  <form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Reset password</button>
-  </form>
-
+<div class="login-main">
+  <div class="quote-small">
+    <p>Look's like good habits isn't the only thing forgotten..</p>
+  </div>
+  <div class="quote-text">
+    <h2>PLEASE, ENTER<br>YOUR EMAIL</h2>
+  </div>
+  <div class="login-menu" id="login-menu">
+    <div class="login-box">
+      <form method="post">
+        {% csrf_token %}
+        <div class="form-group">
+          <input type="email" name="email" placeholder="Email">
+        </div>
+        <button type="submit" class="reset-btn">Reset password</button>
+      </form>
+    </div>
+  </div>
+</div>
 {% endblock %}
