--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -110,7 +110,7 @@ footer {
     z-index: 1;
     padding: 20px;
     border-radius: 10px;
-    width: 40%;
+    width: 38.5%;
 }
 
 .h1 {
@@ -167,6 +167,7 @@ footer {
     margin-left: .5rem;
     width: 128px;
     margin-top: 1rem;
+    cursor: pointer;
     transition: all .55s ease;
 }
 
@@ -190,6 +191,7 @@ footer {
     margin-left: .5rem;
     width: 128px;
     margin-top: 6rem;
+    cursor: pointer;
     transition: all .55s ease;
 }
 
@@ -483,11 +485,11 @@ img {
     }
 }
 
+/*-----------------------responsive design --------------*/
 
 @media (max-width: 768px) {
     .progress-bar {
         width: 100%;
-        /* Adjust width for smaller screens */
         margin-left: auto;
         margin-right: auto;
     }
@@ -498,6 +500,91 @@ img {
     }
 }
 
+
+@media (max-width: 430px) {
+
+    /*landingpage*/
+    .landing-page {
+        width: 100%;
+        top: 55%;
+    }
+
+    .outer-box {
+        width: 70%;
+        aspect-ratio: 1;
+        outline: 15px solid #d19b4e;
+        transform: rotate(-20deg);
+        border-radius: 30px;
+        z-index: 1;
+        top: 1%;
+    }
+
+    .h1 {
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+        backdrop-filter: blur(10px);
+        -webkit-backdrop-filter: blur(10px);
+        border-radius: 6px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
+        display: flex;
+        width: 95%;
+        height: auto;
+        align-items: center;
+        align-content: center;
+        text-align: center;
+        flex-direction: column;
+        color: whitesmoke;
+        z-index: 1;
+        font-weight: 700;
+        line-height: 1.2rem;
+        padding: 25px;
+    }
+
+    .h1 p {
+        top: 23%;
+    }
+
+    .learn-more-btn {
+        transform: translateY(5px);
+    }
+
+    footer {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: whitesmoke;
+        height: 60px;
+        width: 100%;
+        bottom: 0;
+    }
+
+    .copyright {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        color: black;
+        text-decoration: none;
+        gap: 2rem;
+        padding: 8px;
+        z-index: 1002;
+        text-wrap: wrap;
+        font-size: .8rem;
+    }
+
+    .copyright a {
+        color: black;
+    }
+
+
+    /*login-page*/
+    .quote-text {
+        display: flex;
+        font-size: 3rem;
+    }
+
+
+}
 
 
 /*--------------------Login-------------------*/
@@ -569,6 +656,7 @@ input[type="email"]::placeholder {
 
 
 .login-btn {
+
     display: flex;
     justify-content: center;
     align-items: center;
@@ -608,6 +696,15 @@ button {
 
 .password-reset a {
     text-decoration: none;
+}
+
+.reset-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    white-space: nowrap;
+    cursor: pointer;
 }
 
 
@@ -694,3 +791,5 @@ label {
         }
     }
 }
+
+/*-------------------Exercise---------*/
