--- a/fj/fitness_jerk/templates/fitness_jerk/exercise_loose.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/exercise_loose.html
@@ -13,19 +13,19 @@
         {% for exercise in exercises %}
         <li class="exercise-item" data-duration="{{ exercise.duration }}" data-name="{{ exercise.name }}"
             style="display: none;">
-            <span class="exercise-name">{{ exercise.name }}</span>
-            <iframe class='video_url' width="400" height="240"
+            <iframe class='video_url' width="500" height="340"
                 src="{{ exercise.video_url }}?start={{ exercise.start_time }}&end={{ exercise.end_time }}"
                 frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen>
-            </iframe>
+            </iframe><br>
+            <span class="exercise-name">{{ exercise.name }}</span>
         </li>
         {% endfor %}
         {% endif %}
     </ul>
 
     <div id="message">
-        <p>Start</p>
+        <p>TIMER:</p>
     </div>
 
     <div id="timer">
@@ -34,7 +34,7 @@
 
     <div class="button-layout">
         <button id="start-btn" data-play-icon="{% static 'play.svg' %}" data-pause-icon="{% static 'pause.svg' %}">
-            <img src="{% static 'play.svg' %}" alt="Play" fill="red">
+            <img src="{% static 'play.svg' %}" alt="PlayPause" fill="red">
         </button>
         <button id="finish-btn">
             <a href="{% url 'finish' %}">Done!</a>
