--- a/fj/fitness_jerk/templates/fitness_jerk/delete.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/delete.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="login-main">
     <div class="quote-small">
-      <p>NOTHING IS IMPOSSIBLE</p>
+      <p>ALREADY GIVING UP?</p>
     </div>
     <div class="quote-text">
       <h2>DELETE<br>CONFIRMATION</h2>
