--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -644,7 +644,7 @@ button {
     flex-wrap: wrap;
     align-content: center;
     border-radius: 30px;
-    padding: 30px;
+    padding: 20px;
     margin-bottom: 70px; 
     color: whitesmoke;
     
@@ -679,14 +679,11 @@ form.settings_form {
     margin:auto;
     text-align: center;
     width: fit-content;
+    height: 150px;
     
 }
 
 .user_details {
-    border-color: whitesmoke;
-    box-shadow: 0px 5px 12px #292929;
-    border-style: solid;
-    border-radius: 10px;
     padding: 10px;
     margin-top: 5px;
 }
@@ -726,23 +723,19 @@ form.settings_form {
 }
 
 .profile_pic_settings {
-    border-color: whitesmoke;
-    box-shadow: 0px 5px 12px #292929;
-    border-radius: 10px;
     padding: 10px;
-    margin-top: 20px;
 }
 
 .dropdown-label {
-    padding: 3px;
-    border: 1px solid #2929294f;
+    padding: 5px; 
+    border: 1px solid black;
     background-color:  whitesmoke;
     cursor: pointer;
     width: fit-content;
-    /* border-radius: 10px; */
     margin-left: 5px;
     color: black;
     font-size: 13px;
+    overflow: visible;
 }
 
 .dropdown-checkbox:checked + .dropdown-label + .dropdown-selected-avatar + .dropdown-options,
@@ -761,7 +754,7 @@ form.settings_form {
     background-color:  whitesmoke;
     border: 1px solid  #2929294f;
     height: fit-content; 
-    overflow:visible;
+    overflow: visible;
     width: fit-content;
     color: black;
 }
@@ -769,9 +762,9 @@ form.settings_form {
 .option {
     display: flex;
     align-items: center;
-    padding: 10px;
+    padding: 5px;
     cursor: pointer;
-    z-index: 10;
+    z-index: 9999;
 }
 
 .option img {
@@ -842,10 +835,6 @@ label[for="id_image"] {
 }
 
 .update_delete_btn {
-    border-color: whitesmoke;
-    box-shadow: 0px 5px 12px #292929;
-    border-style: solid;
-    border-radius: 10px;
     padding: 5px;
 }
 
@@ -861,6 +850,7 @@ label[for="id_image"] {
 .delete {
     width:fit-content;
     font-size: 15px;
+    font-weight: 600;
     background-color: red;
     border-radius: 10px;
     padding: 5px;
