--- a/fj/fitness_jerk/templates/fitness_jerk/base.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/base.html
@@ -25,8 +25,8 @@
     <footer>
         <p class="copyright">
             © 2024-2024 FITNESS software that rocks!
-            <a href="#">Impressum</a>
-            <a href="#">Datenschutz</a>
+            <a href="{% url 'imprint' %}">Imprint</a>
+            <a href="{% url 'privacy_policy' %}">Privacy Policy</a>
         </p>
     </footer>
 </body>
