--- a/fj/fitness_jerk/templates/registration/login.html
+++ b/fj/fitness_jerk/templates/registration/login.html
@@ -39,7 +39,7 @@
             <a href="{% url 'about' %}">Join us</a>
           </div>
           <div class="google-lgn">
-            <a href="#"><img src="../../static/google.png" alt="google" class="google-icon">oogle login</a>
+            <a href="{% provider_login_url 'google' %}"><img src="../../static/google.png" alt="google" class="google-icon">oogle login</a>
           </div>
         </div>
 
