updated: css, responsive for phones, html reworked

--- a/fj/fitness_jerk/templates/fitness_jerk/learn_more.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/learn_more.html
@@ -19,7 +19,8 @@
 
         Imagine having your very own personal trainer, except it's not some intimidating figure barking orders at you
         from
-        across the gym. No, it's something much cooler—it's you who's barking orders at <b>YOURSELF!</b> But of course a
+        across the gym. No, it's something much cooler—it's you who's barking orders at <b style="color:#D19B4E"
+            ;>YOURSELF</b>! But of course a
         fitter,
         more knowledgeable version of
         you.<br><br>
@@ -48,8 +49,8 @@
         Here's to becoming the best version of yourself—one workout at a time.<br><br>
 
         Signed,
-        Your Fit Future Self
+        Your Fit Future Self <br>
+        <a href="{% url 'welcome' %}" class="home-btn">Return..</a>
     </p>
-    <script src="{% static 'navbar_js.js' %}"></script>
 </div>
 {% endblock %}
