--- a/fj/fitness_jerk/static/css/navbar_css.css
+++ b/fj/fitness_jerk/static/css/navbar_css.css
@@ -28,7 +28,8 @@
 }
 
 .nav-item {
-    color: white;
+    color: whitesmoke;
+    font-weight: 700;
     text-decoration: none;
     transition: color 0.3s;
     margin: 12px;
