--- a/fj/fitness_jerk/static/css/styles.css
+++ b/fj/fitness_jerk/static/css/styles.css
@@ -205,13 +205,19 @@ footer {
 
 
 /*------------Anas Changes profile---------*/
-/*------------profile page---------*/
 
 .row {
     display: flex;
-    padding: 5px;
-    flex-direction: row;
-    align-items: center;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    margin-top: 80px;
+    flex-wrap: wrap;
+    align-content: center;
+    color: black;
 }
 
 .leftcolumn {
@@ -238,33 +244,36 @@ footer {
 
 .centercolumn {
     text-transform: uppercase;
-    /* Make the text uppercase */
     text-align: center;
     font-size: calc(0.5em + 1vw);
 
 }
 
-/* Clear floats after the columns */
 .row::after {
     content: "";
     display: table;
     clear: both;
 }
 
+.hello {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
 .profile {
-    background-color: #2929294f;
-    border-radius: 30px;
-    padding: 30px;
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0px 5px 12px #292929;
 }
 
 .profile_pic img {
     width: 150px;
     height: 150px;
-    /* Ensure the image is square */
     border-radius: 15px;
-    /* Make the image round */
     object-fit: cover;
-    /* Ensure the image covers the dimensions without distortion */
 }
 
 
@@ -284,16 +293,13 @@ footer {
     width: 100%;
     padding: 50px;
     margin-bottom: 50px;
-    background-color: #2929294f;
-    border-radius: 30px;
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0px 5px 12px #292929;
     height: fit-content;
     align-content: center;
     text-align: center;
-}
-
-#id_height,
-#id_weight {
-    color: black;
 }
 
 input[type="submit"] {
@@ -303,7 +309,7 @@ input[type="submit"] {
 .message {
     background-color: #dff0d8;
     border: 1px solid #d6e9c6;
-    color: whitesmoke;
+    color: #3c763d;
     padding: 10px;
     margin-bottom: 10px;
     position: relative;
@@ -320,8 +326,10 @@ input[type="submit"] {
     flex-direction: row;
     display: flex;
     justify-content: center;
-    background-color: #2929294f;
-    border-radius: 30px;
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0px 5px 12px #292929;
 
 }
 
@@ -351,7 +359,6 @@ img {
     content: '';
     position: absolute;
     inset: 0;
-    /* background: limegreen; */
     z-index: 100;
     background-image: radial-gradient(circle, transparent 50px, black);
     opacity: 0;
@@ -398,7 +405,6 @@ img {
     filter: invert(0);
     width: 100%;
     margin-inline: auto;
-    /* transform: translateY(0rem) translateZ(20px); */
     inset: auto 0 2rem;
     transition: var(--timing);
 }
@@ -415,7 +421,6 @@ img {
 
 .muscles:hover .front-image {
     opacity: 1;
-    /* transform: translateY(-2rem) translateZ(-10px); */
 }
 
 /*Progress Bar*/
@@ -425,8 +430,10 @@ img {
     width: 50%;
     height: 100px;
     text-align: left;
-    background-color: #2929294f;
-    border-radius: 30px;
+    background-color: whitesmoke;
+    border-radius: 16px;
+    padding: 20px;
+    box-shadow: 0px 5px 12px #292929;
     padding: 15px;
     margin-bottom: 20px;
 
@@ -436,7 +443,7 @@ img {
     letter-spacing: 1px;
     margin-bottom: 20px;
     margin-left: 10px;
-    color: #ffffff;
+    color: black;
     font-size: 16px;
 
 }
@@ -446,11 +453,13 @@ img {
     width: 100%;
     height: 25px;
     border-radius: 5px;
+    border-color: #292929;
+    border-style: solid;
 
 }
 
 .progress-bar div {
-    height: 25px;
+    height: 20px;
     border-radius: 5px;
     width: 0%;
 
@@ -465,11 +474,11 @@ img {
     margin-top: -10px;
     margin-right: -30px;
     margin-left: 30px;
-    color: #959595;
+    color: #292929;
     display: flex;
     align-items: center;
     justify-content: center;
-    border: 1px solid rgb(100, 248, 1);
+    border: 1px solid #292929;
 
 }
 
@@ -485,7 +494,6 @@ img {
     }
 }
 
-/*-----------------------responsive design --------------*/
 
 @media (max-width: 768px) {
     .progress-bar {
@@ -499,6 +507,8 @@ img {
         margin-right: auto;
     }
 }
+
+/*responsivdesign -Wisam-*/
 
 
 @media (max-width: 430px) {
@@ -710,10 +720,72 @@ button {
 
 /*------------settings---------------------*/
 
-.profile_settings {
-    background-color: #2929294f;
+/*------------settings---------------------*/
+
+.settings_main {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    margin-top: 10px;
+    overflow: visible;
+    flex-wrap: wrap;
+    align-content: center;
     border-radius: 30px;
-    padding: 30px;
+    padding: 20px;
+    margin-bottom: 70px;
+    color: whitesmoke;
+
+
+}
+
+.profile_settings {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    overflow: visible;
+    flex-wrap: wrap;
+    align-content: center;
+    border-radius: 30px;
+    padding: 15px;
+    margin-bottom: 70px;
+
+}
+
+form.settings_form {
+    width: fit-content;
+    background-color: whitesmoke;
+    border-radius: 16px;
+    box-shadow: 0px 5px 12px #292929;
+    color: black;
+    padding-bottom: 5px;
+}
+
+.image_top {
+    display: block;
+    margin: auto;
+    text-align: center;
+    width: fit-content;
+    height: auto;
+    aspect-ratio: 1;
+    transform: translateY(5px);
+    border-radius: 8px;
+
+}
+
+.details-txt {
+    transform: translateY(15px);
+}
+
+.profile-txt {
+    transform: translateY(15px);
+}
+
+.user_details {
+    padding: 10px;
 }
 
 .profile_settings a {
@@ -721,9 +793,163 @@ button {
     color: rgba(4, 30, 42, 1)
 }
 
-#image-clear_id,
-label {
+.update_btn {
+    display: block;
+    margin: auto;
+}
+
+.delete_option {
+    text-align: center;
+}
+
+.profile_img {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+}
+
+.custom-dropdown {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    z-index: 10;
+}
+
+.dropdown-checkbox {
     display: none;
+}
+
+.profile_pic_settings {
+    padding: 10px;
+}
+
+.dropdown-label {
+    padding: 5px;
+    border: 1px solid black;
+    background-color: whitesmoke;
+    cursor: pointer;
+    width: fit-content;
+    margin-left: 5px;
+    color: black;
+    font-size: 13px;
+    overflow: visible;
+}
+
+.dropdown-checkbox:checked+.dropdown-label+.dropdown-selected-avatar+.dropdown-options,
+.dropdown-label:hover+.dropdown-selected-avatar+.dropdown-options,
+.dropdown-options:hover {
+    display: block;
+}
+
+.dropdown-options {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 41%;
+    right: 0;
+    z-index: 9999;
+    background-color: whitesmoke;
+    border: 1px solid #2929294f;
+    height: fit-content;
+    overflow: visible;
+    width: fit-content;
+    color: black;
+}
+
+.option {
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    cursor: pointer;
+    z-index: 9999;
+}
+
+.option img {
+    width: 40px;
+    height: 30px;
+    margin-right: 10px;
+    border-radius: 10px;
+}
+
+.option:hover {
+    background-color: #7a7a7a3b;
+}
+
+.option input[type="radio"] {
+    display: none;
+}
+
+.option input[type="radio"]:checked+img {
+    outline: 2px solid #D19B4E;
+}
+
+label[for="id_image"] {
+    display: none;
+}
+
+#id_image {
+    margin-left: 5px;
+    margin-right: 5px;
+    width: fit-content;
+}
+
+.dropdown-selected-avatar {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    align-content: center;
+    flex-wrap: wrap;
+    margin-left: 5px;
+}
+
+.dropdown-selected-avatar img {
+    width: 30px;
+    height: 20px;
+    margin-right: 5px;
+
+}
+
+#id_height {
+    width: fit-content;
+    padding: 5px;
+}
+
+#id_weight {
+    width: fit-content;
+    margin-top: 5px;
+    padding: 5px;
+}
+
+.errorlist {
+    color: whitesmoke;
+    margin: 5px;
+    list-style-type: none;
+    background-color: #fa03034f;
+    width: fit-content;
+    padding: 2px;
+}
+
+.update_delete_btn {}
+
+/* -----------Delete page--------------- */
+
+
+.back_profile {
+    width: fit-content;
+
+}
+
+.delete {
+    width: fit-content;
+    font-size: 15px;
+    font-weight: 600;
+    background-color: red;
+    border-radius: 10px;
+    padding: 5px;
+    color: whitesmoke;
 }
 
 /*------------------learn_more/about_us-----------*/
@@ -743,25 +969,51 @@ label {
     color: white;
 }
 
-@media (max-width: 768px) {
+.home-btn {
+    display: flex;
+    justify-content: center;
+    color: whitesmoke;
+    outline: 3px solid whitesmoke;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 16px;
+    text-align: center;
+    font-size: .8rem;
+    margin-top: 1rem;
+    width: 128px;
+    cursor: pointer;
+    transition: all .55s ease;
+}
+
+.home-btn:hover {
+    background: transparent;
+    color: #292929;
+    transform: translateX(4px)
+}
+
+@media (max-width: 810px) {
     .about-us-container {
         background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
         backdrop-filter: blur(10px);
-        border-radius: 18px;
+        border-radius: 16px;
         border: 1px solid rgba(255, 255, 255, 0.2);
         box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
-        width: 100%;
+        width: 95%;
         overflow: auto;
         font-size: 12px;
-        margin-top: 1rem;
+        margin-top: 4rem;
+        height: 85%;
         z-index: 1;
     }
 
     .about-us {
-        font-size: 14px;
-        text-align: left;
-        color: white;
+        text-align: center;
+        color: whitesmoke;
         z-index: 1;
+    }
+
+    .home-btn {
+        margin-left: 42.5%;
     }
 
     .copyright {
@@ -769,27 +1021,117 @@ label {
         align-items: center;
     }
 
-    @media only screen and (min-device-width: 375px) and (max-device-width: 812px) and (-webkit-min-device-pixel-ratio: 3) {
-        .about-us-container {
-            background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
-            backdrop-filter: blur(10px);
-            border-radius: 18px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
-            box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
-            width: 100%;
-            overflow: auto;
-            font-size: 12px;
-            margin-top: 1rem;
-            z-index: 1;
-        }
 
-        .about-us {
-            font-size: 14px;
-            text-align: left;
-            color: white;
-            z-index: 1;
-        }
+    form.settings_form {
+        width: fit-content;
+        align-content: center;
+    }
+
+
+    .copyright {
+        display: flex;
+        align-items: center;
+    }
+
+
+    .profile_settings {
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+    }
+
+    .image_top {
+        scale: 75%;
+        margin-top: -4rem;
+        border-radius: 50%;
+    }
+
+    .user_details {
+        padding: 0;
+        margin-top: -50px;
+        text-align: center;
     }
 }
+
+
+
+@media (max-width: 430px) {
+    .about-us-container {
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+        backdrop-filter: blur(10px);
+        border-radius: 16px;
+        border: 1px solid rgba(255, 255, 255, 0.2);
+        box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.4);
+        width: 95%;
+        overflow: auto;
+        font-size: 12px;
+        margin-top: 4rem;
+        height: 84%;
+        line-height: 1.015rem;
+        z-index: 1;
+        overflow: auto;
+    }
+
+    .about-us {
+        font-size: .8rem;
+        text-align: left;
+        color: whitesmoke;
+        line-height: .83rem;
+        z-index: 1;
+    }
+
+    .home-btn {
+        margin-left: 30%;
+    }
+
+    form.settings_form {
+        display: flex;
+        flex-direction: column;
+        line-height: 0.85rem;
+        align-content: center;
+        color: black;
+    }
+
+
+    .copyright {
+        display: flex;
+        align-items: center;
+    }
+
+
+    .profile_settings {
+        display: flex;
+        flex-direction: column;
+        margin-top: 2rem;
+    }
+
+    .profile_image {
+        display: flex;
+        justify-content: left;
+        text-wrap: wrap;
+    }
+
+    .image_top {
+        scale: 75%;
+        border-radius: 50%;
+        transform: translateY(40px);
+    }
+
+
+    .user_details {
+        padding: 0;
+        margin-top: -50px;
+    }
+
+    .details-txt {
+        transform: translateY(5px);
+    }
+
+    .profile-txt {
+        transform: translateY(5px);
+    }
+
+}
+
 
 /*-------------------Exercise---------*/
