--- a/fj/fitness_jerk/static/css/timer_css.css
+++ b/fj/fitness_jerk/static/css/timer_css.css
@@ -50,11 +50,10 @@ p {
 
 .button-layout {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     align-content: center;
     height: 20%;
-    width: 70%;
     padding: 2% 2%;
     margin-top: auto;
     gap: 1rem;
@@ -75,8 +74,6 @@ p {
 
 #start-btn:active {
     border: none;
-
-
 
 }
 
@@ -117,6 +114,7 @@ p {
     border: none;
     border-radius: 35px;
     text-align: center;
+    white-space: nowrap;
     cursor: pointer;
     display: flex;
     justify-content: center;
@@ -158,7 +156,12 @@ p {
 }
 
 /* Responsive Design for iPhone */
-@media only screen and (max-width: 480px) {
+@media (max-width: 430px) {
+    .exercise-container {
+        display: flex;
+        width: 100%;
+    }
+
     #timer {
         font-size: 24px;
         margin-bottom: 10px;
@@ -169,9 +172,47 @@ p {
         padding: 6px 12px;
     }
 
+    .button-layout {
+        display: flex;
+        align-content: center;
+        justify-content: space-between;
+    }
+
     #finish-btn {
-        width: 80%;
-        padding: 0.5rem 1rem;
-        font-size: 14px;
+        color: whitesmoke;
+        background: green;
+        border: none;
+        border-radius: 35px;
+        text-align: center;
+        font-size: 1rem;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+    }
+
+    #return-btn {
+        color: whitesmoke;
+        background: red;
+        border: none;
+        border-radius: 35px;
+        text-align: center;
+        font-size: 1rem;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        white-space: nowrap;
+    }
+
+    .video_url {
+        width: 90%;
+        height: 50%;
+    }
+
+    #start-btn {
+        width: 0;
     }
 }
