--- a/fj/fitness_jerk/templates/registration/login.html
+++ b/fj/fitness_jerk/templates/registration/login.html
@@ -35,7 +35,7 @@
         </div>
         <div class="login-bottom">
           <div class="join-us-btn">
-            <a href="{% url 'about' %}">Join us</a>
+            <a href="{% url 'signup' %}">Join us</a>
           </div>
           <div class="google-lgn">
             <a href="{% provider_login_url 'google' %}"><img src="../../static/google.png" alt="google"
