--- a/fj/fitness_jerk/templates/registration/login.html
+++ b/fj/fitness_jerk/templates/registration/login.html
@@ -1,5 +1,7 @@
 {% extends 'fitness_jerk/base.html' %}
 {% load static %}
+{% load socialaccount %}
+
 
 {% block title %}SIGNIN{% endblock %}
 <link rel="stylesheet" href="{% static 'css/styles.css' %}">
@@ -33,12 +35,14 @@
         </div>
         <div class="login-bottom">
           <div class="join-us-btn">
-            <a href="{% url 'about' %}">Join us</a>
+            <a href="{% url 'signup' %}">Join us</a>
           </div>
           <div class="google-lgn">
-            <a href="#"><img src="../../static/google.png" alt="google" class="google-icon">oogle login</a>
+            <a href="{% provider_login_url 'google' %}"><img src="../../static/google.png" alt="google"
+                class="google-icon">oogle login</a>
           </div>
         </div>
+
       </div>
     </div>
   </div>
