profile.html fixed placement

--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -25,7 +25,7 @@
                 <p>{{ posts.post }}</p>
                 {% else %}
                 <p>Welcome. Finally started you Bastard!!!</p>
-                {% endif %}            
+                {% endif %}
             </div>
             <div class="profile">
                 <h3 style="text-align: left; margin-bottom: 10px;">Profile</h3>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="workout">
-            <h3 style="margin-top: 15px; margin-left: 15px;">Workouts</h3>
+            <h3 style="margin-left: 15px;">Workouts</h3>
 
             <div class="muscles">
                 <a href="{% url 'workout' exercise_type='build-muscle' %}">
