Fin: Refactor views/profile_view

--- a/fj/fitness_jerk/templates/fitness_jerk/profile.html
+++ b/fj/fitness_jerk/templates/fitness_jerk/profile.html
@@ -49,7 +49,7 @@
                         <p style="color: rgb(170, 167, 167);">Current<br>BMI</p>
                     </div>
                     <div class="progress_workouts" style="padding: 10px;">
-                        <p>{{ user.members.progress }}<br></p>
+                        <p>{{ user.members.workouts_done }}<br></p>
                         <p style="color: rgb(170, 167, 167);">Current<br>Workouts</p>
                     </div>
                 </div>
